--- a/style.css
+++ b/style.css
@@ -13,67 +13,43 @@ body {
     background-color: rgb(243, 243, 243);
     margin: 0;
     padding: 0;
-    display: flex;
-    justify-content: center;
 }
 
-.instagram-wrapper {
+.root {
     display: flex;
-    align-items: center;
-    justify-content: start;
-    width: 60%;
+    width: 100%;
     height: 100vh;
 }
 
-.instagram-phone {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 50%;
+.banners {
+    width: calc(100% - 500px);
+    padding: 24px;
+    position: relative;
+    min-height: 500px;
+    background-image: url('./img/login-bg-01.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
-.instagram-phone img {
-    height: 50rem;
-}
-
-.instagram-continue {
-    display: flex;
-    align-items: center; /* horizontal */
-    justify-content: space-around; /* vertical */
-    flex-direction: column;
-    width: 50%;
-    min-height: 34rem;
-}
-
-.group {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-direction: column;
-    background-color: #ffffff;
+.banners:after {
+    top: 0;
+    left: 0;
     width: 100%;
-    padding: 1.3rem 0;
-    border: 1px solid lightgray;
+    height: 100%;
+    content: "";
+    z-index: 1;
+    position: absolute;
 }
 
-.group:nth-child(1) {
-    min-height: 19rem;
+.content {
+    width: 700px;
+    height: 100vh;
+    overflow-y: auto;
 }
 
 .instagram-logo {
     height: 3rem;
-}
-
-.profile-photo {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    overflow: hidden;
-}
-
-.profile-photo img {
-    height: 6rem;
 }
 
 .instagram-login {
@@ -88,72 +64,14 @@ body {
     margin-top: 1rem;
 }
 
-.not-account {
-    color: rgb(160, 160, 160);
-}
-
-.link-blue {
-    color: #0095f6;
-}
-
-.get-the-app {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    padding: 1.3rem 0;
-}
-
-.download {
-    display: flex;
-    width: 100%;
-    justify-content: space-evenly;
-    align-items: center;
-    padding: 1rem;
-}
-
-.app-download {
-    height: 3rem;
-    width: 10rem;
-    background-size: cover;
-}
-
-.app-download:nth-child(1) {
-    background-image: url('./img/apple-button.png');
-}
-
-.app-download:nth-child(2) {
-    background-image: url('./img/googleplay-button.png');
-}
-
-/* media queries */
-
-
-@media (max-width: 1024px) {
-    .instagram-wrapper {
-        width: 90%;
-    }
-}
-
 @media (max-width: 650px) {
-    body {
-        background-color: #ffffff;
-    }
-
-    .instagram-wrapper {
-        width: 90%;
-    }
-
-    .instagram-phone {
+    
+    .banners {
         display: none;
     }
 
-    .instagram-continue {
+    .content {
         width: 100%;
     }
     
-    .group {
-        border: 1px solid transparent;
-    }
 }
