--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ body {
     background-color: rgb(243, 243, 243);
     margin: 0;
     padding: 0;
+    color: #73879C;
 }
 
 .root {
@@ -60,15 +61,17 @@ body {
     position: relative;
     text-shadow:0 1px 0 #fff;
     max-width: 350px;
+    width: 100%;
     align-self: center;
     justify-content: center;
+    flex-direction: column;
 }
 
 .hiddenanchor {
     display: none;
 }
 
-.login-form{
+.login-form {
     z-index:22;
     position: absolute;
 }
@@ -113,6 +116,75 @@ body {
     animation-duration:0.5s;
     animation-timing-function:ease;
     animation-fill-mode:both
+}
+
+.container h1{
+    font:normal 25px Helvetica, Arial, sans-serif;
+    letter-spacing:-0.05em;
+    line-height:20px;
+    margin-bottom: 30px;
+    text-align: center;
+}
+.container h1:before,
+.container h1:after{
+    content:"";
+    height:1px;
+    position:absolute;
+    top:10px;width:27%
+}
+.container h1:after{
+    background:#7e7e7e;
+    background:-webkit-gradient(linear, left top, right top, from(#7e7e7e), to(#fff));
+    background:linear-gradient(to right, #7e7e7e 0%, #fff 100%);
+    right:0
+}
+.container h1:before{
+    background:#7e7e7e;
+    background:-webkit-gradient(linear, right top, left top, from(#7e7e7e), to(#fff));
+    background:linear-gradient(to left, #7e7e7e 0%, #fff 100%);
+    left:0
+}
+.container h1:before,
+.container h1:after{
+    content:"";
+    height:1px;
+    position:absolute;
+    top:10px;width:20%
+}
+.container h1:after{
+    background:#7e7e7e;
+    background:-webkit-gradient(linear, left top, right top, from(#7e7e7e), to(#fff));
+    background:linear-gradient(to right, #7e7e7e 0%, #fff 100%);
+    right:0
+}
+.container h1:before{
+    background:#7e7e7e;
+    background:-webkit-gradient(linear, right top, left top, from(#7e7e7e), to(#fff));
+    background:linear-gradient(to left, #7e7e7e 0%, #fff 100%);
+    left:0
+}
+
+form input[type="text"], 
+form input[type="email"], 
+form input[type="password"] {
+    border-radius: 3px;
+    -webkit-box-shadow: 0 1px 0 #fff, 0 -2px 5px rgb(0 0 0 / 8%) inset;
+    -ms-box-shadow: 0 1px 0 #fff,0 -2px 5px rgba(0,0,0,0.08) inset;
+    -o-box-shadow: 0 1px 0 #fff,0 -2px 5px rgba(0,0,0,0.08) inset;
+    box-shadow: 0 1px 0 #fff, 0 -2px 5px rgb(0 0 0 / 8%) inset;
+    border: 1px solid #c8c8c8;
+    color: #777;
+    margin: 0 0 20px;
+    width: 100%;
+    display: block;
+    height: calc(1.5em + 0.75rem + 2px);
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    font-weight: 400;
+    line-height: 1.5;
+    background-color: #fff;
+    background-clip: padding-box;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
 
 @media (max-width: 650px) {
