--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Pacifico');
+
 * {
     padding: 0;
     margin: 0;
@@ -7,6 +9,11 @@
     font-size: 14px;
 }
 
+a {
+    color: #5A738E;
+    text-decoration: none;
+}
+
 body {
     width: 100%;
     min-height: 100vh;
@@ -14,6 +21,10 @@ body {
     margin: 0;
     padding: 0;
     color: #73879C;
+}
+
+form {
+    text-align: center;    
 }
 
 .root {
@@ -65,6 +76,13 @@ body {
     align-self: center;
     justify-content: center;
     flex-direction: column;
+}
+
+.actions {
+    display: flex;  
+    flex: 1;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .hiddenanchor {
@@ -186,6 +204,58 @@ form input[type="password"] {
     background-clip: padding-box;
     transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
 }
+
+.btn {
+    margin: 0.25rem 0.125rem;
+    color: #6c757d;
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    background-color: transparent;
+    border: 1px solid #6c757d;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+    transition: color .15s ease-in-out
+        , background-color .15s ease-in-out
+        , border-color .15s ease-in-out
+        ,box-shadow .15s ease-in-out;
+}
+
+.btn:active {
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
+}
+
+.btn:hover {
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
+}
+
+.separator {
+    border-top: 1px solid #D8D8D8;
+    margin-top: 10px;
+    padding-top: 10px;
+    text-align: center;
+}
+
+.separator h1{
+    letter-spacing: normal;
+    font: 400 35px/1.5 'Pacifico', Helvetica, sans-serif;
+    margin-top: 40px;
+    text-shadow: 3px 3px 0px rgba(0,0,0,0.1), 7px 7px 0px rgba(0,0,0,0.05);
+}
+
+
 
 @media (max-width: 650px) {
     
